# Robotics_course_2026

./: LICENSE  README.md
docker installation/: README.md
racademy_ws/: frames_2026-04-10_12.00.12.gv
racademy_ws/install/: local_setup.sh  setup.sh
racademy_ws/install/learning_tf2_cpp/share/learning_tf2_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
racademy_ws/install/learning_tf2_py/share/learning_tf2_py/: package.ps1  package.sh  package.xml
racademy_ws/install/racademy_cpp_examples/share/racademy_cpp_examples/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  (+3 more)
racademy_ws/log/: latest_build
racademy_ws/src/learning_tf2_cpp/: CMakeLists.txt
racademy_ws/src/learning_tf2_cpp/src/: static_turtle_tf2_broadcaster.cpp  turtle_tf2_broadcaster.cpp
racademy_ws/src/learning_tf2_py/: setup.py
racademy_ws/src/racademy_description/: CMakeLists.txt  package.xml
racademy_ws/src/racademy_description/launch/: gazebo.launch.py
racademy_ws/src/racademy_description/rviz/: display.rviz
racademy_ws/src/racademy_description/urdf/: racademy.urdf.xacro  racademy_ws_gazebo.xacro
racademy_ws/src/racademy_py_examples/: package.xml  setup.py
start/first test installation/linux/: README.md
start/recitation_0/: README.md  REAMME.md
tutorials/exe0/: 1_Workspace_and_nodes.md  2_Publisher_Subscriber.md  Publisher_Subscriber.md
tutorials/exe0_pub_sub/: 2_Publisher_Subscriber.md  3_Ros2_parameters.md
tutorials/exe2_urdf/: 00_lesson_URDF.md
(+49 files in other folders)
